--- a/BackEnd/.env
+++ b/BackEnd/.env
@@ -1,4 +1,1 @@
-MONGODB_URI=mongodb+srv://<username>:<password>@cluster0.mongodb.net/product_management?retryWrites=true&w=majority
-DATABASE_NAME=product_management
-APP_HOST=0.0.0.0
-APP_PORT=8000
+MONGODB_URI=mongodb+srv://:@cluster0.mongodb.net/product_management?retryWrites=true&w=majority DATABASE_NAME=product_management APP_HOST=0.0.0.0 APP_PORT=8000
